--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: app
     image: app:1.0.0
     # build:
-    #   context: .
+    #   context: app
     #   dockerfile: Dockerfile
     ports:
       - "3000:3000"
