Use self-hosted

--- a/ .github/workflows/npm-publish.yml
+++ b/ .github/workflows/npm-publish.yml
@@ -5,9 +5,11 @@ name: Node.js Package
 
 on:
   push:
-    branches: [feature/cicd]
+    branches: 
+      - feature/cicd
   pull_request:
-    branches: [feature/cicd]
+    branches: 
+      - feature/cicd
         
 
 jobs:
