--- a/ .github/workflows/npm-publish.yml
+++ b/ .github/workflows/npm-publish.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+    # - master
+    - feature/cicd
 
 jobs:
   build:
