Use ubuntu-latest

--- a/ .github/workflows/npm-publish.yml
+++ b/ .github/workflows/npm-publish.yml
@@ -6,7 +6,9 @@ name: Node.js CI
 on:
   push:
     branches:
-    # - master
+    - feature/cicd
+  pull_request:
+    branches:
     - feature/cicd
 
 jobs:
