--- a/ .github/workflows/main.yml
+++ b/ .github/workflows/main.yml
@@ -5,9 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ feature/cicd ]
+    branches: [ master,feature/cicd ]
   pull_request:
-    branches: [ feature/cicd ]
+    branches: [ master,feature/cicd ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
