--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 14.15.3
       - run: npm install
-      - run: npm test
+      - run: npm run test
 
   
 
