--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,8 +18,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.15.3
-      - run: npm install
-      - run: npm run test
+      - run: cd app && npm install && npm run test
 
   
 
