--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "fastify": "^3.9.2"
+    "fastify": "^3.9.2",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "jest": "^26.6.3",
