--- a/docker-compose-template.yml
+++ b/docker-compose-template.yml
@@ -2,6 +2,8 @@
 version: '3'
 services:
   ${SERVICE_NAME1}:
+    # depends_on:
+    #   - db
     container_name: ${CONTAINER_NAME1}
     image: ${IMAGE_NAME1}:${IMAGE_TAG1}
     # build:
@@ -9,4 +11,26 @@ services:
     #   dockerfile: ${DOCKERFILE_NAME1}
     ports:
       - "3000:3000"
-      
+    networks:
+      - db-nk
+
+  ${SERVICE_NAME2}:
+    container_name: ${CONTAINER_NAME2}
+    image: ${IMAGE_NAME2}:${IMAGE_TAG2}
+    # build:
+    #   context: ${APP_LOCATION2}
+    #   dockerfile: ${DOCKERFILE_NAME2}
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: demodb
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
+    networks:
+      - db-nk
+
+networks:
+  db-nk:
+    external:
+      name: db-network
