--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "fastify": "^3.9.2",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
