--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@
 version: '3'
 services:
   app:
-    # depends_on:
-    #   - db
+    depends_on:
+      - db
     container_name: app
     image: app:1.0.0
     # build:
