--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,8 @@
     "supertest": "^6.0.1"
   },
   "scripts": {
-    "test": "jest --coverage --verbose",
-    "test:gateway": "API_URL=https://localhost:9999 jest --coverage",
+    "test": "jest --coverage --verbose --detectOpenHandles",
+    "test:gateway": "API_URL=https://localhost:9999 jest --coverage --verbose --detectOpenHandles",
     "start": "node index.js"
   },
   "jest": {
