--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "jest --coverage --verbose --detectOpenHandles",
-    "test:gateway": "API_URL=https://localhost:9999 jest --coverage --verbose --detectOpenHandles",
+    "test:gateway": "HOST=http://localhost:3000 jest --coverage --verbose --detectOpenHandles",
     "start": "node index.js"
   },
   "jest": {
